--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,12 +16,12 @@ only_commits:
 # Build matrix
 environment:
   matrix:
-#    - type: Cygwin
-#      build: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./cygwin.sh"
-#      command: C:\cygwin64\bin\bash -lc
-#    - type: MinGW
-#      build: call mingw.bat
-#      command: cmd /C
+    - type: Cygwin
+      build: C:\cygwin64\bin\bash -lc "cd $APPVEYOR_BUILD_FOLDER/build; exec 0</dev/null; ./cygwin.sh"
+      command: C:\cygwin64\bin\bash -lc
+    - type: MinGW
+      build: call mingw.bat
+      command: cmd /C
     - type: VisualStudio
       build: call vs.bat
       command: cmd /C
@@ -34,11 +34,6 @@ matrix:
 install:
   # Chocolatey
   - choco upgrade chocolatey
-  # Doxygen
-  - choco install doxygen.install
-  - choco install ghostscript
-  - choco install graphviz
-  - choco install miktex
   # Cygwin
   - if "%type%"=="Cygwin" if not exist "C:\cygwin64" mkdir "C:\cygwin64"
   - if "%type%"=="Cygwin" appveyor-retry appveyor DownloadFile "http://cygwin.com/setup-x86_64.exe" -FileName "C:\cygwin64\setup-x86_64.exe"
@@ -50,10 +45,6 @@ install:
   - if "%type%"=="MinGW" 7z x -y -oC:\ "C:\mingw.7z" > nul
   - if "%type%"=="MinGW" set PATH=C:\mingw64\bin;%PATH:C:\Program Files\Git\usr\bin;=%
   - if "%type%"=="MinGW" set INCLUDE=C:\mingw64\x86_64-w64-mingw32\include;%INCLUDE%
-  # Visual Studio
-#  - if "%type%"=="VisualStudio" set PATH=C:\Program Files\MiKTeX 2.9\miktex\bin\x64;C:\Program Files\gs\gs9.22\bin;%PATH%
-#  - if "%type%"=="VisualStudio" set INCLUDE=C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\um;C:\Program Files (x86)\Windows Kits\10\Include\10.0.17134.0\shared;%INCLUDE%
-# - if "%type%"=="VisualStudio" set LIB=C:\Program Files (x86)\Windows Kits\10\Lib\10.0.17134.0\um\x64;%LIB%
   # CMake
   - cmake --version
   # Doxygen support
